--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8"
+    "node-sass-middleware": "0.9.8",
+    "request": "latest"
   }
 }
