--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "node-sass": "^4.7.2",
     "node-sass-middleware": "4.5.3",
     "request": "latest"
   }
