--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "node-sass": "^4.7.2",
-    "node-sass-middleware": "4.5.3",
+    "node-sass": "^4.9.3",
+    "node-sass-middleware": "latest",
     "request": "latest"
   }
 }
