--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.16.3",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
+    "morgan": "^1.9.1",
     "node-sass": "^4.9.3",
     "node-sass-middleware": "latest",
     "request": "latest"
