--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
   "name": "portfolio",
-  "version": "0.0.0",
-  "private": true,
+  "description": "My personal website.",
+  "version": "1.0.0",
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robere2/Portfolio.git"
+  },
+  "keywords": [
+    "portfolio",
+    "javascript",
+    "vite",
+    "frontend",
+    "static"
+  ],
+  "author": "Erik Roberts",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/robere2/Portfolio/issues"
+  },
+  "homepage": "https://github.com/robere2/Portfolio#readme",
+  "devDependencies": {
+    "vite": "^2.9.9"
   },
   "dependencies": {
-    "aws-sdk": "^2.382.0",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "^4.16.3",
-    "morgan": "^1.9.1",
-    "node-sass": "^4.14.1",
-    "node-sass-middleware": "latest",
-    "pug": "^2.0.4",
-    "request": "latest"
+    "esbuild": "^0.14.39",
+    "esbuild-darwin-arm64": "^0.14.39",
+    "is-core-module": "^2.9.0",
+    "fsevents": "^2.3.2",
+    "has": "^1.0.3",
+    "resolve": "^1.22.0",
+    "rollup": "^2.74.1",
+    "postcss": "^8.4.14",
+    "function-bind": "^1.1.1",
+    "path-parse": "^1.0.7",
+    "source-map-js": "^1.0.2",
+    "nanoid": "^3.3.4",
+    "picocolors": "^1.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0"
   }
 }
