--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,6 @@
   "dependencies": {
     "esbuild": "^0.14.39",
     "is-core-module": "^2.9.0",
-    "fsevents": "^2.3.2",
     "has": "^1.0.3",
     "resolve": "^1.22.0",
     "rollup": "^2.74.1",
@@ -41,5 +40,8 @@
     "nanoid": "^3.3.4",
     "picocolors": "^1.0.0",
     "supports-preserve-symlinks-flag": "^1.0.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
