--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache && npx prettier --check .",
+    "fix": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache --fix && npx prettier --write . --ignore-unknown",
+    "prepare": "cd .. && husky install client/.husky"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,10 @@
   },
   "homepage": "https://github.com/robere2/Portfolio#readme",
   "devDependencies": {
+    "eslint": "^8.16.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.0",
+    "prettier": "^2.6.2",
     "vite": "^2.9.9"
   },
   "dependencies": {
@@ -43,5 +50,8 @@
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
+  },
+  "lint-staged": {
+    "**/*": "npm run fix"
   }
 }
