--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Lint Client
         run: |
-          cd ../client
+          cd client
           npm ci
           npm run lint
 
@@ -61,7 +61,7 @@ jobs:
         run: |
           cd api
           npm ci
-          cd ../client
+          cd client
           npm ci
           cd ..
 
