--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache && npx prettier --check .",
     "fix": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache --fix && npx prettier --write . --ignore-unknown",
-    "prepare": "cd .. && husky install api/.husky"
+    "prepare": "is-ci || cd .. && husky install api/.husky"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "eslint": "^8.16.0",
     "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2"
   },
