--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "lint": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache && npx prettier --check .",
     "fix": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache --fix && npx prettier --write . --ignore-unknown",
-    "prepare": "cd .. && husky install client/.husky"
+    "prepare": "is-ci || cd .. && husky install client/.husky"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "eslint": "^8.16.0",
     "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "vite": "^2.9.9"
