--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "lint": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache && npx prettier --check .",
     "fix": "npx eslint . --ext .js,.mjs,.cjs,.ts,.mts,.cts --cache --fix && npx prettier --write . --ignore-unknown",
-    "prepare": "is-ci || cd .. && husky install client/.husky"
+    "prepare": "is-ci || (cd .. && husky install client/.husky)"
   },
   "repository": {
     "type": "git",
