--- a/api/sample.local.settings.json
+++ b/api/sample.local.settings.json
@@ -3,7 +3,7 @@
   "Values": {
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "AzureWebJobs.HttpExample.Disabled": "true",
-    "TwilioApiKey": "SENDGRID_API_KEY",
+    "MailgunApiKey": "MAILGUN_API_KEY",
     "RecipientEmail": "YOUR_EMAIL_ADDRESS",
     "SenderEmail": "SENDGRID_EMAIL_ADDRESS",
     "RecaptchaSecret": "RECAPTCHA_V3_SECRET_KEY"
